# matome-blog

.github/: copilot-instructions.md  project-instructions.md
.github/instructions/: project.instructions.md
.github/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
content/posts/: page-test-01.mdx  page-test-02.mdx  page-test-03.mdx  page-test-04.mdx  page-test-05.mdx  page-test-06.mdx  page-test-07.mdx  page-test-08.mdx  page-test-09.mdx  page-test-10.mdx  page-test-11.mdx  page-test-12.mdx  page-test-13.mdx  page-test-14.mdx  page-test-15.mdx  page-test-16.mdx  page-test-17.mdx  page-test-18.mdx  page-test-19.mdx  page-test-20.mdx
matome-blog/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
matome-blog/prisma/: dev.db  dev.db-journal  schema.prisma
matome-blog/public/: site.webmanifest
sumamrizer/: .env.example  README.md  hello.py  main.py  pyproject.toml  tasks.md
sumamrizer/src/inputs/: __init__.py  media_handler.py  text_handler.py  url_handler.py
sumamrizer/src/outputs/: __init__.py  console_output.py  markdown_output.py
sumamrizer/src/summarizers/: __init__.py  local_llm_summarizer.py  openai_summarizer.py
sumamrizer/src/transcribers/: __init__.py  text_transcriber.py  whisper_transcriber.py
sumamrizer/src/utils/: logger.py
summarizer/: .env.sample  .gitignore  README.md  main.py  main_batch.py  pyproject.toml  test.txt
summarizer/summarizer/: __init__.py  text_summarizer.py  youtube_summarizer.py  youtube_utils.py
(+81 files in other folders)
